--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.6.0/p5.js"></script>
     <script src="bullet.js"></script>
     <script src="sketch.js"></script>
+    <script src="gui.js"></script>
   </head>
   <body>
   </body>
